--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@
 title: My First Jekyll App
 email: ico_skipernov@abv.bg
 description: "I am Hristo Skipernov."
+destination: docs
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: vonrepiks
@@ -49,6 +50,7 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - docs
 
 collections:
   authors:
